[gd_scene load_steps=11 format=3 uid="uid://cglmeqtqtlt0q"]

[ext_resource type="Script" path="res://Scripts/RoomEvents/info_event.gd" id="1_isab8"]

[sub_resource type="Gradient" id="Gradient_nw3fc"]
interpolation_mode = 1
colors = PackedColorArray(0.243762, 0.696882, 0.934572, 1, 0, 0, 0, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_2adyh"]
gradient = SubResource("Gradient_nw3fc")
width = 24
height = 24
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0, 0.5)

[sub_resource type="Gradient" id="Gradient_hswu8"]
interpolation_mode = 1
offsets = PackedFloat32Array(0, 0.149351, 1)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0, 1, 1, 1, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_u4sei"]
gradient = SubResource("Gradient_hswu8")
width = 32
height = 32
fill = 1
fill_from = Vector2(0.5, 0.5)

[sub_resource type="Gradient" id="Gradient_yf72m"]
interpolation_mode = 1
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_eg15n"]
gradient = SubResource("Gradient_yf72m")
width = 4
height = 12
fill = 1
fill_from = Vector2(0.5, 0.5)

[sub_resource type="CircleShape2D" id="CircleShape2D_5atdl"]
radius = 12.0

[sub_resource type="LabelSettings" id="LabelSettings_xs7gw"]
font_size = 20
outline_size = 4
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_xm4j7"]
font_size = 12
outline_size = 4
outline_color = Color(0, 0, 0, 1)

[node name="InfoEvent" type="Node2D"]
position = Vector2(24, -24)
script = ExtResource("1_isab8")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = SubResource("GradientTexture2D_2adyh")
offset = Vector2(12, -12)

[node name="Sprite2D3" type="Sprite2D" parent="."]
position = Vector2(0, -2)
scale = Vector2(0.75, 0.75)
texture = SubResource("GradientTexture2D_u4sei")
offset = Vector2(16, -22)

[node name="Sprite2D4" type="Sprite2D" parent="."]
texture = SubResource("GradientTexture2D_eg15n")
offset = Vector2(12, -8)

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 64
collision_mask = 0
monitoring = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(12, -12)
shape = SubResource("CircleShape2D_5atdl")

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
z_index = 1
offset_left = 24.0
offset_top = -96.0
offset_right = 184.0
offset_bottom = -16.0
color = Color(0.243137, 0.698039, 0.933333, 1)

[node name="TitleLabel" type="Label" parent="."]
visible = false
z_index = 1
offset_left = 24.0
offset_top = -96.0
offset_right = 180.0
offset_bottom = -62.0
text = "Empty Room"
label_settings = SubResource("LabelSettings_xs7gw")
horizontal_alignment = 1
vertical_alignment = 1

[node name="BodyLabel" type="Label" parent="."]
visible = false
z_index = 1
offset_left = 24.0
offset_top = -56.0
offset_right = 184.0
offset_bottom = -16.0
text = "Adventurers sleep here!
"
label_settings = SubResource("LabelSettings_xm4j7")
horizontal_alignment = 1
autowrap_mode = 3

[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
